correcciones back , embedding e indexing soportado
